--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./littlestep1.0/src/main.tsx"></script>
+    <script type="module" src="./littlestep1.0/frontend/src/main.tsx"></script>
   </body>
 </html>
