--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=375, initial-scale=1.0" />
-    <title>小脚印 Little Steps</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="./littlestep1.0/frontend/src/main.tsx"></script>
-  </body>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url=./web-little-step1.0/">
+</head>
+<body>
+    <p>正在跳转到应用...</p>
+</body>
 </html>
